--- a/index.html
+++ b/index.html
@@ -277,41 +277,41 @@
           <h2 class="h2Headings">Education</h2>
         </div> -->
 
-        <div class="about">
-          <h2 class="h2Headings" style="line-height: 2.7;">Education</h2>
-          <hr class="hrDesign">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <hr class="hrDesign">
-                <div class="projectDiv">
-                  <img class="eduLogo" src="src/kbpLogo.png" alt="">
-                  <p class="project_P"><span>Maharashtra State Board of Technical Education</span></p>
-                  <p class="project_P">Diploma in Computer Technology.</p>
-                  <p class="project_P">Grade - First Class with Distinction.</p>
-                  <p class="project_P">July 2017 - May 2019</p>
-                  <p class="project_P"><span>Activities & societies</span> - Event Organization Team.</p>
-                  <p class="project_P"><span>Coursework</span> - Data Structures, Database Management, Object Oriented Programming, Software Testing.</p>
-                </div>
+      <div class="about">
+        <h2 class="h2Headings" style="line-height: 2.7;">Education</h2>
+        <hr class="hrDesign">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <hr class="hrDesign">
+              <div class="projectDiv">
+                <img class="eduLogo" src="src/kbpLogo.png" alt="">
+                <p class="project_P"><span>Maharashtra State Board of Technical Education</span></p>
+                <p class="project_P">Diploma in Computer Technology.</p>
+                <p class="project_P">Grade - First Class with Distinction.</p>
+                <p class="project_P">July 2017 - May 2019</p>
+                <p class="project_P"><span>Activities & societies</span> - Event Organization Team.</p>
+                <p class="project_P"><span>Coursework</span> - Data Structures, Database Management, Object Oriented Programming, Software Testing.</p>
               </div>
+            </div>
 
-              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <hr class="hrDesign">
-                <div class="projectDiv">
-                  <img class="eduLogo" src="src/sppuLogo.png" alt="">
-                  <p class="project_P"><span>Savitribai Phule Pune University</span></p>
-                  <p class="project_P">Bachelor of Engineering - Computer Engineering.</p>
-                  <p class="project_P">Grade - 8.76 cgpa</p>
-                  <p class="project_P">July 2019 - May 2022</p>
-                  <p class="project_P"><span>Activities</span> - The Board Member of NSS and organised many events on college campus.</p>
-                  <p class="project_P"><span>Coursework</span> - Data Structures, Software Engineering, Artificial Intelligence, Object Oriented Modeling and Design, Software Testing and Quality Assurance.</p>
-                </div>
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <hr class="hrDesign">
+              <div class="projectDiv">
+                <img class="eduLogo" src="src/sppuLogo.png" alt="">
+                <p class="project_P"><span>Savitribai Phule Pune University</span></p>
+                <p class="project_P">Bachelor of Engineering - Computer Engineering.</p>
+                <p class="project_P">Grade - 8.76 cgpa</p>
+                <p class="project_P">July 2019 - May 2022</p>
+                <p class="project_P"><span>Activities</span> - The Board Member of NSS and organised many events on college campus.</p>
+                <p class="project_P"><span>Coursework</span> - Data Structures, Software Engineering, Artificial Intelligence, Object Oriented Modeling and Design, Software Testing and Quality Assurance.</p>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
-        <!-- <div class="container">
+      <!-- <div class="container">
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
               <hr class="hrDesign">
@@ -340,41 +340,41 @@
             </div>
           </div>
         </div> -->
-      </div>
-    </section>
+  </div>
+  </section>
 
 
-<!-- ______________________________________________________EXPERIENCE_______________________________________________________-->
+  <!-- ______________________________________________________EXPERIENCE_______________________________________________________-->
 
-    <section id="secExperience">
+  <section id="secExperience">
 
-      <div class="about">
-        <h2 class="h2Headings">Experience</h2>
-        <hr class="hrDesign">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-              <hr class="hrDesign">
-              <div class="projectDiv">
-                <p class="project_P">
-                <h3><span>APTRON Solutions Pvt. Ltd.</span></h3>
-                </p>
-                <p class="project_P">May 2018 - June 2018</p>
-                <p class="project_P">Project Developer</p>
-                <ul>
-                  <li>Developed and implemented algorithm for detection and classification problem using deep learning algorithms.</li>
-                  <li>Designed pipeline of the whole project to get it incorporated in the product of the company. Created visualization tool for the project which gives the detailed outcome of error analysis.</li>
-                  <li>Implemented multiprocessing pipeline between different modules which efficiently reduced the memory consumption and improved processing speed.</li>
-                </ul>
-              </div>
+    <div class="about">
+      <h2 class="h2Headings">Experience</h2>
+      <hr class="hrDesign">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <hr class="hrDesign">
+            <div class="projectDiv">
+              <p class="project_P">
+              <h3><span>APTRON Solutions Pvt. Ltd.</span></h3>
+              </p>
+              <p class="project_P">May 2018 - June 2018</p>
+              <p class="project_P">Project Developer</p>
+              <ul>
+                <li>Developed and implemented algorithm for detection and classification problem using deep learning algorithms.</li>
+                <li>Designed pipeline of the whole project to get it incorporated in the product of the company. Created visualization tool for the project which gives the detailed outcome of error analysis.</li>
+                <li>Implemented multiprocessing pipeline between different modules which efficiently reduced the memory consumption and improved processing speed.</li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
 
 
-      <!-- <div class="projects">
+    <!-- <div class="projects">
         <div class="projss">
           <h2 class="h2Headings">Experience</h2>
         </div>
@@ -399,10 +399,26 @@
           </div>
         </div>
       </div> -->
-    </section>
+  </section>
   </div>
 
-  <footer id="footer"></footer>
+  <footer id="footer">
+    <div class="usa">
+      <div class="footerCenterdiv">
+        <a class="icons" href="#"><i class="fab fa-facebook-f"></i></a>
+        <a class="icons" href="#"><i class="fab fa-twitter"></i></a>
+        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="icons" href="https://www.linkedin.com/in/adityagalande/"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+      <p style="color: white; text-align: center; font-size: 25px;">
+        <!-- <a href="mailto:adityagalande6@gmail.com?subject = Feedback&body = Message">
+          Send Feedback
+        </a> -->
+        <a style="text-decoration: none;" href="mailto:adityagalande6@gmail.com">adityagalande6@gmail.com</a>
+      </p>
+    </div>
+  </footer>
 
 
 
