--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       <div class="innerTitle">
         <h1>Aditya Galande</h1>
         <h2>I'm a <span class="animate"></span></h2>
-        <p>Adventures in C++, iOS, Unix, and the biggest of all..Life!. Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
+        <p>Adventures in Android Development, Web Development, Unix, and the biggest of all..Life!.
+        <p>
         <div class="centerdiv">
           <a class="icons" href="#"><i class="fab fa-facebook-f"></i></a>
           <a class="icons" href="#"><i class="fab fa-twitter"></i></a>
@@ -71,8 +72,8 @@
       <div class="about">
         <h2 class="h2Headings">About Me</h2>
         <hr class="hrDesign">
-        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came
-          into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
+        <p>I am currently an undergraduate pursuing Computer Engineering at University of Pune. Focused and enthusiastic developer with a keen interest in software development and android development. By comprehensive exposure to the underlying
+          concepts and applying them vividly to various projects, my love for these domains came into being.</p>
         <a href="#" class="btns">Download CV</a>
       </div>
     </section>
