--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- ______________________________________________________PROJECT_______________________________________________________-->
 
 
-    <section id="secAbout" style="background-color: #f9f9f9;">
+    <section id="secProject" style="background-color: #f9f9f9;">
       <div class="about">
         <h2 class="h2Headings">Projects</h2>
         <hr class="hrDesign">
