--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
               <hr class="hrDesign">
               <div class="projectDiv">
-                <h3 class="h3Design">Daily Cases Report</h3>
+                <h3 class="h3Design">JavaScript Projects</h3>
                 <p class="project_P"> I have Developed and Published an android application "Daily Cases Report" using REST APIs.</p>
                 <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
                 <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
-                <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Picasso Library, Recyclerview.</p>
+                <p class="project_P"><span class="project_span">Tech Stack:</span> JavaScript, Html, XML, CSS.</p>
                 <div class="project_centerdiv">
-                  <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
-                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a>
+                  <!-- <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a> -->
+                  <a class="project_icon_div" href="project.html"><i class="fab fa-2x fa-github"></i></a>
                 </div>
               </div>
             </div>
