--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <p>Adventures in Android Development, Web Development, Unix, and the biggest of all..Life!.
         <p>
         <div class="centerdiv">
-          <a class="icons" href="#"><i class="fab fa-facebook-f"></i></a>
-          <a class="icons" href="#"><i class="fab fa-twitter"></i></a>
+          <a class="icons" href="https://www.facebook.com/aditya.galande.12/"><i class="fab fa-facebook-f"></i></a>
+          <a class="icons" href="https://twitter.com/adityagalande13"><i class="fab fa-twitter"></i></a>
           <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
           <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
           <a class="icons" href="https://www.linkedin.com/in/adityagalande/"><i class="fab fa-linkedin-in"></i></a>
@@ -92,13 +92,13 @@
               <hr class="hrDesign">
               <div class="projectDiv">
                 <h3 class="h3Design">JavaScript Projects</h3>
-                <p class="project_P"> I have Developed and Published an android application "Daily Cases Report" using REST APIs.</p>
-                <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
-                <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
-                <p class="project_P"><span class="project_span">Tech Stack:</span> JavaScript, Html, XML, CSS.</p>
+                <p class="project_P"> These projects was a JavaScript based Applications and Game.</p>
+                <p class="project_P"> In which I have designed Native Speech Recognition, Key Sequence Detection (KONAMI CODE), HTML5 Canvas, Unreal Webcam, Geolocation based Speedometer & Compass, Speech Synthesis, and Event Capture, Propagation,
+                  Bubbling Once.</p>
+                <p class="project_P"> I have also worked with Whack A Mole Game for the various Modules.</p>
+                <p class="project_P"><span class="project_span">Tech Stack:</span> JavaScript, ES6, jQuery, Html, XML, CSS.</p>
                 <div class="project_centerdiv">
-                  <!-- <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a> -->
-                  <a class="project_icon_div" href="project.html"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
                 </div>
               </div>
             </div>
@@ -121,14 +121,13 @@
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
               <hr class="hrDesign">
               <div class="projectDiv">
-                <h3 class="h3Design">Daily Cases Report</h3>
-                <p class="project_P"> I have Developed and Published an android application "Daily Cases Report" using REST APIs.</p>
+                <h3 class="h3Design">Quick Report App</h3>
+                <p class="project_P"> An Android application, Quick Report, which is implemented using USGS API, making a network connection, JSON parsing, image processing, etc.</p>
                 <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
-                <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
-                <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Picasso Library, Recyclerview.</p>
+                <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Listview.</p>
                 <div class="project_centerdiv">
-                  <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
-                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://github.com/adityagalande/android-QuickReport"><i class="fab fa-2x fa-github"></i></a>
+                  <!-- <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a> -->
                 </div>
               </div>
             </div>
@@ -136,14 +135,13 @@
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
               <hr class="hrDesign">
               <div class="projectDiv">
-                <h3 class="h3Design">Daily Cases Report</h3>
-                <p class="project_P"> I have Developed and Published an android application "Daily Cases Report" using REST APIs.</p>
-                <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
-                <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
-                <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Picasso Library, Recyclerview.</p>
+                <h3 class="h3Design">MultiscreenApp</h3>
+                <p class="project_P"> I have Developed an android application "MultiscreenApp" using material views.</p>
+                <p class="project_P"> An Android application, in which you can translate your language into miwok language, using graphical representations, includes the use of material views and Custom ArrayAdapter, MediaPlayer class, etc.</p>
+                <p class="project_P"><span class="project_span">Tech Stack:</span> Material views, Custom ArrayAdapter, MediaPlayer class, Java, Android, XML, Recyclerview.</p>
                 <div class="project_centerdiv">
-                  <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
-                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://github.com/adityagalande/android-MultiscreenApp"><i class="fab fa-2x fa-github"></i></a>
+                  <!-- <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a> -->
                 </div>
               </div>
             </div>
@@ -363,9 +361,9 @@
               <p class="project_P">May 2018 - June 2018</p>
               <p class="project_P">Project Developer</p>
               <ul>
-                <li>Developed and implemented algorithm for detection and classification problem using deep learning algorithms.</li>
-                <li>Designed pipeline of the whole project to get it incorporated in the product of the company. Created visualization tool for the project which gives the detailed outcome of error analysis.</li>
-                <li>Implemented multiprocessing pipeline between different modules which efficiently reduced the memory consumption and improved processing speed.</li>
+                <li>Developed and implemented An android application to create forms, surveys and Take Quiz etc.</li>
+                <li>Designed Auto publish/unpublish on specified dates using pending intents.</li>
+                <li> One can manipulate privacy, forms settings(shuffle, mandatory, etc.).</li>
               </ul>
             </div>
           </div>
@@ -406,8 +404,8 @@
   <footer id="footer">
     <div class="usa">
       <div class="footerCenterdiv">
-        <a class="icons" href="#"><i class="fab fa-facebook-f"></i></a>
-        <a class="icons" href="#"><i class="fab fa-twitter"></i></a>
+        <a class="icons" href="https://www.facebook.com/aditya.galande.12/"><i class="fab fa-facebook-f"></i></a>
+        <a class="icons" href="https://twitter.com/adityagalande13"><i class="fab fa-twitter"></i></a>
         <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
         <a class="icons" href="https://www.linkedin.com/in/adityagalande/"><i class="fab fa-linkedin-in"></i></a>
