--- a/project.html
+++ b/project.html
@@ -12,12 +12,12 @@
 <body>
   <div class="mainDiv">
     <div class="">
-      <h2>Vanilla JavaScript</h2>
+      <h2 class="JsH2Headings">Vanilla JavaScript</h2>
     </div>
     <div class="jsProjectDiv">
       <p>JavaScript Drum Kit</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -25,7 +25,7 @@
     <div class="jsProjectDiv">
       <p>CSS + JS Clock</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -33,7 +33,7 @@
     <div class="jsProjectDiv">
       <p>Playing with CSS Variables and JS</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -41,7 +41,7 @@
     <div class="jsProjectDiv">
       <p>Array Cardio Day 1</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -49,7 +49,7 @@
     <div class="jsProjectDiv">
       <p>Flex Panels Image Gallery</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -57,7 +57,7 @@
     <div class="jsProjectDiv">
       <p>Ajax Type Ahead</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -65,7 +65,7 @@
     <div class="jsProjectDiv">
       <p>Array Cardio Day 2</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -73,7 +73,7 @@
     <div class="jsProjectDiv">
       <p>Fun with HTML5 Canvas</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -81,7 +81,7 @@
     <div class="jsProjectDiv">
       <p>14 Must Know Dev Tools Tricks</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -89,7 +89,7 @@
     <div class="jsProjectDiv">
       <p>Hold Shift to Check Multiple Checkboxes</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -97,7 +97,7 @@
     <div class="jsProjectDiv">
       <p>Custom HTML5 Video Player</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -105,7 +105,7 @@
     <div class="jsProjectDiv">
       <p>Key Sequence Detection (KONAMI CODE)</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -113,7 +113,7 @@
     <div class="jsProjectDiv">
       <p>Slide In on Scroll</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -121,7 +121,7 @@
     <div class="jsProjectDiv">
       <p>Object and Arrays - Reference VS Copy</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -129,7 +129,7 @@
     <div class="jsProjectDiv">
       <p>LocalStorage and Event Delegation</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -137,7 +137,7 @@
     <div class="jsProjectDiv">
       <p>CSS Text Shadow Mouse Move Effect</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -145,7 +145,7 @@
     <div class="jsProjectDiv">
       <p>Sorting Band Names without articles</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -153,7 +153,7 @@
     <div class="jsProjectDiv">
       <p>Tally String Times with Reduce</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -161,7 +161,7 @@
     <div class="jsProjectDiv">
       <p>Unreal Webcam Fun</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -169,7 +169,7 @@
     <div class="jsProjectDiv">
       <p>Native Speech Recognition</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -177,7 +177,7 @@
     <div class="jsProjectDiv">
       <p>Geolocation based Speedometer and Compass</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -185,7 +185,7 @@
     <div class="jsProjectDiv">
       <p>Follow Along Links</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -193,7 +193,7 @@
     <div class="jsProjectDiv">
       <p>Speech Synthesis</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -201,7 +201,7 @@
     <div class="jsProjectDiv">
       <p>Sticky Nav</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -209,7 +209,7 @@
     <div class="jsProjectDiv">
       <p>Event Capture, Propagation, Bubbling and Once</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -217,7 +217,7 @@
     <div class="jsProjectDiv">
       <p>Stripe Follow Along Dropdown</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -225,7 +225,7 @@
     <div class="jsProjectDiv">
       <p>Click and Drag to Scroll</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -233,7 +233,7 @@
     <div class="jsProjectDiv">
       <p>Video Speed Controller UI</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -241,7 +241,7 @@
     <div class="jsProjectDiv">
       <p>Countdown Clock</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -249,7 +249,7 @@
     <div class="jsProjectDiv">
       <p>Whack A Mole Game</p>
       <div class="linkDiv">
-        <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
     </div>
