new project added

--- a/index.html
+++ b/index.html
@@ -121,6 +121,21 @@
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
               <hr class="hrDesign">
               <div class="projectDiv">
+                <h3 class="h3Design">Expense Tracker</h3>
+                <p class="project_P"> This application enables user to keep track of their expenses and give the flexibility to add notes and categories of their expenses.</p>
+                <p class="project_P"> User can also view their expenditure on monthly and yearly basis in a pie-chart.</p>
+                <!-- <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p> -->
+                <p class="project_P"><span class="project_span">Tech Stack:</span> React, JavaScript, Material UI, React Toolbox, ES6, React Foundation, Html, XML, CSS.</p>
+                <div class="project_centerdiv">
+                  <a class="project_icon_div" href="https://github.com/adityagalande/React-Expense_Tracker"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://react-expense-trackers.herokuapp.com/"><i class="fab fa-2x fa-google-play"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <hr class="hrDesign">
+              <div class="projectDiv">
                 <h3 class="h3Design">Quick Report App</h3>
                 <p class="project_P"> An Android application, Quick Report, which is implemented using USGS API, making a network connection, JSON parsing, image processing, etc.</p>
                 <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
