--- a/project.html
+++ b/project.html
@@ -17,80 +17,80 @@
     <div class="jsProjectDiv">
       <p>JavaScript Drum Kit</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-DrumKit/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-DrumKit" target="_blank"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>CSS + JS Clock</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://github.com/adityagalande/javaScript-Clock"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://adityagalande.github.io/javaScript-Clock/"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Playing with CSS Variables and JS</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/-javaScript-css_variables/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/-javaScript-css_variables"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Array Cardio Day 1</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <!-- <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a> -->
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Array-Cardio-1"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Flex Panels Image Gallery</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript--Flex-Panel-Gallery/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript--Flex-Panel-Gallery"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Ajax Type Ahead</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Ajax-Type-Ahead/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Ajax-Type-Ahead"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
-    <div class="jsProjectDiv">
+    <!-- <div class="jsProjectDiv">
       <p>Array Cardio Day 2</p>
       <div class="linkDiv">
         <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
-    </div>
+    </div> -->
 
     <div class="jsProjectDiv">
       <p>Fun with HTML5 Canvas</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-HTML5-Canvas/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-HTML5-Canvas"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
-    <div class="jsProjectDiv">
+    <!-- <div class="jsProjectDiv">
       <p>14 Must Know Dev Tools Tricks</p>
       <div class="linkDiv">
         <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
-    </div>
+    </div> -->
 
     <div class="jsProjectDiv">
       <p>Hold Shift to Check Multiple Checkboxes</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Checkbox/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Checkbox"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
@@ -105,152 +105,152 @@
     <div class="jsProjectDiv">
       <p>Key Sequence Detection (KONAMI CODE)</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Konami-code/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Konami-code"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Slide In on Scroll</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Slide-in-on-scroll/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Slide-in-on-scroll/tree/master/Web%20Development/javaScript-Slide-in-on-scroll"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Object and Arrays - Reference VS Copy</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <!-- <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a> -->
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Referance-vs-Copy"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
-    <div class="jsProjectDiv">
+    <!-- <div class="jsProjectDiv">
       <p>LocalStorage and Event Delegation</p>
       <div class="linkDiv">
         <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
         <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
       </div>
-    </div>
+    </div> -->
 
     <div class="jsProjectDiv">
       <p>CSS Text Shadow Mouse Move Effect</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-mouse-move-shadow/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-mouse-move-shadow"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Sorting Band Names without articles</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Sort-without-article/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Sort-without-article"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Tally String Times with Reduce</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Array-Reduce-Work/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Array-Reduce-Work"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Unreal Webcam Fun</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript--video-stream-webcam/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript--video-stream-webcam"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Native Speech Recognition</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Speech-Recognition/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Speech-Recognition"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Geolocation based Speedometer and Compass</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Geolocation/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Geolocation"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Follow Along Links</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Follow-Along-Link-Highlighter/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Follow-Along-Link-Highlighter"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Speech Synthesis</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Speech-Synthesis/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Speech-Synthesis"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Sticky Nav</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Sticky-Nav/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Sticky-Nav"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Event Capture, Propagation, Bubbling and Once</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Event-Capture-Propagetion-Building/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Event-Capture-Propagetion-Building"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Stripe Follow Along Dropdown</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Stripe-Follow-Along-Nav/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Stripe-Follow-Along-Nav"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Click and Drag to Scroll</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Click-and-Drag/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Click-and-Drag"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Video Speed Controller UI</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Video-Speed-Controller/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Video-Speed-Controller"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Countdown Clock</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Countdown-Timer/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Countdown-Timer"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
     <div class="jsProjectDiv">
       <p>Whack A Mole Game</p>
       <div class="linkDiv">
-        <a class="project_icon_div" href="project.html"><i class="fas fa-external-link-alt"></i></a>
-        <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+        <a class="project_icon_div" href="https://adityagalande.github.io/javaScript-Whack-A-Mole/"><i class="fas fa-external-link-alt"></i></a>
+        <a class="icons" href="https://github.com/adityagalande/javaScript-Whack-A-Mole"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
